[build-system]
requires = ["setuptools", "cython"]
build-backend = "setuptools.build_meta"

[project]
name = "mir-python"
version = "0.0.1"
description = "Demonstrate SO usage"
license = { text = "Apache License Version 2.0" }
requires-python=">=3.10,<3.12"

[tool.setuptools]
# NOTE perhaps add a fine-grained exclude so that we eg keep headers only
# https://setuptools.pypa.io/en/latest/userguide/datafiles.html#exclude-package-data
# however, beware of the interaction with data_files -- with `true` it crashes on
# absolute paths etc. Fine-graining such as `tool.setuptools.package-data` may be also
# needed
include-package-data = false
