# (C) Copyright 1996- ECMWF.
#
# This software is licensed under the terms of the Apache Licence Version 2.0
# which can be obtained at http://www.apache.org/licenses/LICENSE-2.0.
#
# In applying this licence, ECMWF does not waive the privileges and immunities
# granted to it by virtue of its status as an intergovernmental organisation nor
# does it submit to any jurisdiction.

[build-system]
requires = ["setuptools", "cython"]
build-backend = "setuptools.build_meta"

[project]
name = "mir-python"
version = "0.2.0"
description = "Don't use this"
requires-python=">=3.10,<3.12"
authors = [
	{ name = "European Centre for Medium-Range Weather Forecasts (ECMWF)", email = "software.support@ecmwf.int" }
]
classifiers=[
	"Development Status :: 3 - Alpha",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: Apache Software License",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Cython",
	"Programming Language :: Python :: Implementation :: CPython",
	"Operating System :: POSIX :: Linux",
	"Operating System :: MacOS",
	"Topic :: Scientific/Engineering",
]
# TODO replace with just ["findlibs", "mirlib"] once we are out of test pypi only. Note this *prevents* any pypi upload!
dependencies = [
        "findlibs",
        "eccodeslib @ https://test-files.pythonhosted.org/packages/8c/b5/c5c4d0f51eb347eb8fce27bb3d7bac3eb4b3beb9ad15abf84cbdabbfc73b/eccodeslib-2.40.0-1-cp311-cp311-manylinux_2_28_x86_64.whl",
        "eckitlib @ https://test-files.pythonhosted.org/packages/8b/9a/4291d51c32383fff17ff00091014ff4995d56d60fdd4d947029e7bdabae3/eckitlib-1.28.4-1-cp311-cp311-manylinux_2_28_x86_64.whl",
        "mirlib @ https://test-files.pythonhosted.org/packages/5c/94/f35ac1779f64d4ddf3729ce9dc01cad56ae06be7d103ad64661a84eba9ba/mirlib-1.24.0-cp311-cp311-manylinux_2_28_x86_64.whl"
]


[tool.setuptools]
# NOTE perhaps add a fine-grained exclude so that we eg keep headers only
# https://setuptools.pypa.io/en/latest/userguide/datafiles.html#exclude-package-data
# however, beware of the interaction with data_files -- with `true` it crashes on
# absolute paths etc. Fine-graining such as `tool.setuptools.package-data` may be also
# needed
include-package-data = false
